--- a/main.ui
+++ b/main.ui
@@ -56,6 +56,19 @@
         </property>
        </widget>
       </item>
+      <item row="1" column="1">
+       <widget class="QLineEdit" name="setText">
+        <property name="maximumSize">
+         <size>
+          <width>16777215</width>
+          <height>20</height>
+         </size>
+        </property>
+       </widget>
+      </item>
+      <item row="0" column="1">
+       <widget class="QLineEdit" name="rebrickableKeyText"/>
+      </item>
       <item row="3" column="0" colspan="2">
        <widget class="QScrollArea" name="partsScrollArea">
         <property name="verticalScrollBarPolicy">
@@ -77,19 +90,6 @@
           </rect>
          </property>
         </widget>
-       </widget>
-      </item>
-      <item row="0" column="1">
-       <widget class="QLineEdit" name="rebrickableKeyText"/>
-      </item>
-      <item row="1" column="1">
-       <widget class="QLineEdit" name="setText">
-        <property name="maximumSize">
-         <size>
-          <width>16777215</width>
-          <height>20</height>
-         </size>
-        </property>
        </widget>
       </item>
      </layout>
@@ -132,16 +132,28 @@
   </widget>
   <widget class="QStatusBar" name="statusbar"/>
   <action name="actionWanted">
+   <property name="checkable">
+    <bool>true</bool>
+   </property>
    <property name="text">
     <string>Wanted</string>
    </property>
   </action>
   <action name="actionHave">
+   <property name="checkable">
+    <bool>true</bool>
+   </property>
    <property name="text">
     <string>Have</string>
    </property>
   </action>
   <action name="actionBoth">
+   <property name="checkable">
+    <bool>true</bool>
+   </property>
+   <property name="checked">
+    <bool>true</bool>
+   </property>
    <property name="text">
     <string>Both</string>
    </property>
